tests/auto/qml/qquickfolderlistmodel/qquickfolderlistmodel.pro
@@ -11,3 +11,5 @@ TESTDATA = data/*
 CONFIG += parallel_test
 QT += core-private gui-private qml-private testlib
 DEFINES += QT_DISABLE_DEPRECATED_BEFORE=0
+
+RESOURCES += data/introspect.qrc
